--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,12 @@ environment:
 dependencies:
   charcode: ^1.3.1
   collection: ^1.15.0
-  flutter_quill: ^6.3.5
   markdown: ^5.0.0
-
+  flutter_quill:
+    git:
+      url: https://github.com/FBSocial/fb_flutter_quill.git
+      ref: 6.3.5+12
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
